--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+
+<div class="container">  
 <a routerLink="signup">Signup</a> | <a routerLink="login">Login</a> |
 <a routerLink="add">Add</a>
 
 <br>
 
 <router-outlet></router-outlet>
+</div>
