REST POST insert user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
+<app-header></app-header>
 
 <div class="container">  
-<a routerLink="signup">Signup</a> | <a routerLink="login">Login</a> |
-<a routerLink="add">Add</a>
-
+    
 <br>
 
 <router-outlet></router-outlet>
