--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,9 +7,7 @@
         <li class="nav-item">
             <a class="nav-link active" routerLink="signup">Signup</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link active" routerLink="signup2">Signup2</a>
-        </li>
+       
 
         <li class="nav-item">
             <a class="nav-link active" routerLink="login">Login</a>
@@ -17,6 +15,14 @@
 
         <li class="nav-item">
             <a class="nav-link active" routerLink="add">Addition</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link active" routerLink="signup2">Signup2</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link active" routerLink="login2">Login2</a>
         </li>
 
     </ul>
