--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,5 +25,12 @@
             <a class="nav-link active" routerLink="login2">Login2</a>
         </li>
 
+        
+        <li class="nav-item">
+            <a class="nav-link active" routerLink="reactive-signup">Reactive Signup</a>
+        </li>
+
+        <button (click)="logout()">Logout</button>
+
     </ul>
 </nav>
